Change scripts for instal/uninstal windows services